--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Ihsas01.github.io/React-Portfolio",
+  "homepage": "https://github.com/AlthafMarikkar/Althaf-Portfolio",
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
